# holoviz

./: .appveyor-cron.yml  .appveyor.yml  .buildinfo  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  FAQ.html  GOVERNANCE.md  JupyterCON2017_Title.pptx  LICENSE  LICENSE.txt  MANIFEST.in  README.html  README.md  README.rst  Roadmap.html  _rediraffe_redirected.json  about.html  anaconda-project.yml  background.html  community.html  contribute.html  contributing.html  datasets.yml  dodo.py  environment-win.yml  environment.yml  genindex.html  index.html  installation.html  objects.inv  postBuild  pyproject.toml  pytest.ini  roadmap.html  search.html  (+5 more)
.github/workflows/: doc.yml  docs.yaml  test.yaml  test.yml
_static/: documentation_options.js  nbsite.css
about/: funding.html  index.html  roadmap.html
about/governance/: index.html
about/heps/: hep0.html  hep1.html  hep2.html  index.html
apps/: osm-1billion.py  server_app.py
apps/nyc_taxi/: main.py
apps/taxi_player/: main.py
binder/: environment.yml  postBuild  requirements.txt  start
conda.recipe/: meta.yaml
contribute/: index.html  operating_guide.html
data/: macro.csv
doc/: FAQ.rst  README.md  Roadmap.rst  about.rst  background.rst  community.rst  conf.py  contribute.md  contributing.md  index.md  index.rst  installation.rst  latest_news.html
doc/_static/: custom.css  site.css
doc/_templates/: layout.html  nav-bar-holoviz.html  navbar.html
doc/about/: funding.md  index.md  roadmap.md
doc/contribute/: index.md  operating_guide.md
doc/flowcharts/: holoviz.mermaid.json  holoviz.mermaid.readme  holoviz.mermaid.txt
doc/governance/: index.md
doc/heps/: hep1.md  hep2.md  index.md
doc/learn/: FAQ.md  background.md  index.md  tutorial_link.md
doc/talks/: index.rst
doc/topics/: index.rst
doc/tutorial/: 00_Setup.ipynb  00_Welcome.rst  01_Overview.ipynb  06_Dashboards.ipynb  08_Custom_Dashboards.ipynb  index.ipynb  index.rst  scipy18.rst
etc/: test_notebooks.py
examples/: anaconda-project-lock.yml  anaconda-project.yml  datasets.yml  env.yml  environment.yml  pixi.toml
examples/data/: eclipses_21C.csv  nyc_taxi_50k.parq
examples/talks/: Overview.ipynb
examples/topics/: index.ipynb  nyc_taxi.ipynb
examples/tutorial/: 00_Setup.ipynb  01_Overview.ipynb  01_Setup.ipynb  01_Workflow_Introduction.ipynb  02_Annotating_Data.ipynb  02_Basic_Plotting.ipynb  02_Building_Panels.ipynb  02_Introduction_to_Panel.ipynb  02_Plotting.ipynb  03_Composing_Plots.ipynb  03_Customizing_Visual_Appearance.ipynb  03_Interlinked_Panels.ipynb  03_Panel_Interactivity.ipynb  03_The_.plot_API.ipynb  04_Basic_Plotting.ipynb  04_Interlinked_Plots.ipynb  04_Using_.plot.ipynb  04_Working_with_Tabular_Data.ipynb  05_Building_Panels.ipynb  05_Composing_Holoviews_Plots.ipynb  05_Composing_Plots.ipynb  05_Composing_hv_plots.ipynb  05_Interactive_Pipelines.ipynb  05_Working_with_Gridded_Data.ipynb  06_Custom_Interactivity.ipynb  06_Dashboards.ipynb  06_Dashboards.py  06_Interlinked_Plots.ipynb  06_Large_Data.ipynb  06_Network_Graphs.ipynb  07_Custom_Interactivity.ipynb  07_Custom_Interactivity.py  07_Dashboards.ipynb  07_Geographic_Data.ipynb  07_Large_Data.ipynb  (+21 more)
exercises/: Exercise-1-making-data-visualizable.ipynb  Exercise-2-datasets-and-collections-of-data.ipynb  Exercise-3-networks-and-geoviews.ipynb  Exercise-4-dynamic-interactions.ipynb  Exercise-5-exporting-and-deploying-apps.ipynb
flowcharts/: holoviz.mermaid.json
hep/: accepted_heps.md  hep0.md  hep1.md  hep2.md  index.md
holoviz/: __init__.py  __main__.py
learn/: FAQ.html  background.html  index.html
notebooks/: 00-welcome.ipynb  00_Setup.ipynb  00_Welcome.ipynb  01-workflow-introduction.ipynb  01_Workflow_Introduction.ipynb  02-annotating-data.ipynb  02-introduction-to-elements.ipynb  02_Annotating_Data.ipynb  03-customizing-visual-appearance.ipynb  03_Customizing_Visual_Appearance.ipynb  04-exploration-with-containers.ipynb  04-working-with-datasets.ipynb  04_Working_with_Datasets.ipynb  04_Working_with_Tabular_Data.ipynb  05-working-with-gridded-data.ipynb  05-working-with-tabular-data.ipynb  05_Working_with_Gridded_Data.ipynb  06-custom-interactivity.ipynb  06-working-with-gridded-data.ipynb  06_Network_Graphs.ipynb  07-custom-interactivity.ipynb  07-geographic-data.ipynb  07-working-with-large-datasets.ipynb  07_Geographic_Data.ipynb  08-deploying-bokeh-apps.ipynb  08-operations-and-pipelines.ipynb  08-working-with-large-datasets.ipynb  08_Custom_Interactivity.ipynb  09-deploying-bokeh-apps.ipynb  09-operations-and-pipelines.ipynb  09-parameters-and-widgets.ipynb  09-working-with-large-datasets.ipynb  09_Operations_and_Pipelines.ipynb  10-parameters-and-widgets.ipynb  10-working-with-large-datasets.ipynb  10_Working_with_Large_Datasets.ipynb  11-deploying-bokeh-apps.ipynb  11-streaming-data.ipynb  11_Streaming_Data.ipynb  12_Parameters_and_Widgets.ipynb  (+15 more)
pyviz/: __init__.py  __main__.py  cmd.py  datasets.yml  download_sample_data.py
solutions/: 00-welcome-with-solutions.ipynb  01-introduction-to-elements-with-solutions.ipynb  02-customizing-visual-appearance-with-solutions.ipynb  03-exploration-with-containers-with-solutions.ipynb  04-working-with-tabular-data-with-solutions.ipynb  05-working-with-gridded-data-with-solutions.ipynb  06-custom-interactivity-with-solutions.ipynb  07-working-with-large-datasets-with-solutions.ipynb  08-deploying-bokeh-apps-with-solutions.ipynb  README.md
topics/: index.html
tutorial/: 00_Setup.html  00_Welcome.html  03_Customizing_Visual_Appearance.html  04_Working_with_Tabular_Data.html  05_Working_with_Gridded_Data.html  07_Geographic_Data.html  08_Custom_Interactivity.html  11_Streaming_Data.html  12_Parameters_and_Widgets.html  13_Deploying_Bokeh_Apps.html  A1_Exploration_with_Containers.html  Advanced_Dashboards.html  Composing_Plots.html  Custom_Dashboards.html  Custom_Interactivity.html  Dashboards.html  Interactive_Pipelines.html  Interlinked_Plots.html  Overview.html  Setup.html  index.html  scipy18.html  scipy19.html  strata_ny18.html
(+87 files in other folders)
