[metadata]
name = holoviz
version = attr: param.version.get_setupcfg_version
description = High-level tools to simplify visualization in Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Scientific/Engineering
author = HoloViz developers
author_email = developers@holoviz.org
maintainer = HoloViz developers
maintainer_email = developers@holoviz.org
url = http://holoviz.org
project_urls =
    Bug Tracker = https://github.com/holoviz/holoviz/issues
    Documentation = http://holoviz.org
    Source Code = https://github.com/holoviz/holoviz

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pyct[cmd] >=0.4.6
    rise                    # Optional; for presenting overview as slides
    ###
    # mutually compatible holoviz-maintained packages
    # if you change these, make sure to change the check in 01_Setup.ipynb
    bokeh ==2.1.0
    holoviews ==1.13.2
    hvplot ==0.6.0
    datashader ==0.11.0
    panel ==0.9.5
    param ==1.9.3
    ###

[options.extras_require]
tests =
    nbsmoke >=0.2.6
    flake8
    pytest >=2.8.5

doc =
    nbsite >=0.6.1
    sphinx_holoviz_theme

graphs =
    networkx
    scikit-image

# unlikely to all be installable via pip at the moment, but still declared for e.g. checking
indirect =
    python-snappy           # for reading snappy-compressed Parquet files
    cffi                    # Unstated dependency of fastparquet?
    python                  # so we can pin to 3.6

[options.entry_points]
console_scripts =
    holoviz = holoviz.__main__:main

[wheel]
universal = 1

[tool:autover.configparser_workaround.archive_commit=$Format:%h$]

[tool:pyctdev.conda]

# maybe this should be called environments, and be used for both pip
# and conda, for both environments and packages.

packages =
    holoviz = graphs, indirect
