[metadata]
name = holoviz
version = attr: param.version.get_setupcfg_version
description = High-level tools to simplify visualization in Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Scientific/Engineering
author = HoloViz developers
author_email = developers@holoviz.org
maintainer = HoloViz developers
maintainer_email = developers@holoviz.org
url = http://holoviz.org
project_urls =
    Bug Tracker = https://github.com/holoviz/holoviz/issues
    Documentation = http://holoviz.org
    Source Code = https://github.com/holoviz/holoviz

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy ==1.18.1
    pandas ==1.0.3
    dask[complete] ==2.17.2
    xarray ==0.15.1
    matplotlib ==3.1.3
    notebook >=5.5
    rise                    # Optional; for presenting overview as slides
    ###
    # mutually compatible holoviz-maintained packages
    # if you change these, make sure to change the check in 01_Setup.ipynb
    bokeh >=2.0.1,<2.1
    holoviews >=1.13.2,<1.14.0
    hvplot >=0.6.0,<0.7.0
    datashader >=0.11.0,<0.12.0
    panel >=0.9.5,<1.0
    param >=1.9.2,<2.0.0

[options.extras_require]
tests =
    nbsmoke >=0.2.6
    flake8
    pytest >=2.8.5

doc =
    nbsite >=0.6.1
    sphinx_holoviz_theme

# unlikely to all be installable via pip at the moment, but still declared for e.g. checking
indirect =
    netcdf4
    fastparquet >=0.2.1
    python-snappy           # for reading snappy-compressed Parquet files

[options.entry_points]
console_scripts =
    holoviz = holoviz.__main__:main

[wheel]
universal = 1

[tool:autover.configparser_workaround.archive_commit=$Format:%h$]

[tool:pyctdev.conda]

# maybe this should be called environments, and be used for both pip
# and conda, for both environments and packages.

packages =
    holoviz = indirect
